ci: 🐳 Docker 이미지 빌드 및 푸시 추가, Java 21 설정
- ☕ Java 빌드 환경을 21 버전으로 단일화
- 🔑 Docker Hub 이미지 푸시를 위한 로그인 액션 추가
- 📦 Docker 이미지 빌드 및 Hub로 푸시 자동화

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java-version: [ '8', '11', '17', '21' ]
+        java-version: [ '21' ]
 
     steps:
       - name: Checkout sources
@@ -84,3 +84,16 @@ jobs:
       - name: Build with Gradle
         working-directory: ./
         run: ./gradlew build --no-daemon
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/ticket-app:latest
