ci: ✨ 배포 워크플로우 도입 및 CI/CD 재구성
✨ 신규 deploy.yml 워크플로우 추가
⚙️ notify-on-failure.yml에 Deploy 워크플로우 포함
빌드와 배포 프로세스 명확히 분리

--- a/.github/workflows/notify-on-failure.yml
+++ b/.github/workflows/notify-on-failure.yml
@@ -2,7 +2,7 @@ name: Notify on Failure
 
 on:
   workflow_run:
-    workflows: [ "Build", "Docker" ]
+    workflows: [ "Build", "Docker", "Deploy" ]
     types:
       - completed
 
