--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,10 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ matrix.java-version }}
 
+      - name: Grant execute permission for Gradle
+        working-directory: ./
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
