ci: ⚙️ Docker 배포 환경 변수 설정 및 스크립트 가독성 개선
➕ DOCKER_NETWORK, CONTAINER_NAME 환경 변수 추가
📦 Docker 컨테이너 이름과 네트워크를 환경 변수로 설정
✨ deploy 스크립트 내 docker run 명령 가독성 개선
♻️ 긴 docker run 명령을 여러 줄로 분리

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+env:
+  DOCKER_NETWORK: app-network
+  CONTAINER_NAME: dev-ticket-container
+
 jobs:
   build-app:
     runs-on: ubuntu-latest
@@ -102,7 +106,11 @@ jobs:
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/ticket-api:latest
             sudo docker stop dev-ticket-api || true
             sudo docker rm dev-ticket-api || true
-            sudo docker run -d -p 8080:8080 --name dev-ticket-api ${{ secrets.DOCKERHUB_USERNAME }}/ticket-api:latest
+            sudo docker run -d \
+              --name ${{ env.CONTAINER_NAME }} \
+              -p 8080:8080 \
+              --network ${{ env.DOCKER_NETWORK }} \
+              ${{ secrets.DOCKERHUB_USERNAME }}/ticket-api:latest
 
       - name: Remove GitHub IP from Security Group
         if: always()
