config: ⚙️ .env 파일 및 민감 정보 Git 추적 제외
🔒 민감한 환경 변수 파일 Git 커밋 방지
🚫 .env 및 .env.* 파일 Git 추적 목록에서 제외
📝 .env.example 파일은 템플릿으로 유지하고 추적 포함

--- a/.gitignore
+++ b/.gitignore
@@ -194,4 +194,9 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+### User Specific ###
+.env
+.env.*
+!.env.example
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,intellij,java,gradle
