--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,40 @@ repositories {
     mavenCentral()
 }
 
+// dependency versions
+def jacksonDatabindVersion = '3.0.2'
+def springDocOpenApiVersion = '2.8.13'
+def querydslVersion = '5.1.0'
+def p6spyVersion = '1.12.0'
+
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // Jackson Datatype: JSR310
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    // Jackson Databind
+    implementation "tools.jackson.core:jackson-databind:$jacksonDatabindVersion"
+
+    // SpringDoc OpenAPI Starter WebMVC UI
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$springDocOpenApiVersion"
+
+    // Querydsl JPA Support
+    implementation "com.querydsl:querydsl-jpa:$querydslVersion:jakarta"
+    // Querydsl APT Support
+    annotationProcessor "com.querydsl:querydsl-apt:$querydslVersion:jakarta"
+    // Jakarta Annotations API
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+    // Jakarta Persistence API
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    // P6Spy Spring Boot Starter
+    implementation "com.github.gavlyukovskiy:p6spy-spring-boot-starter:$p6spyVersion"
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly "com.h2database:h2"
+    runtimeOnly "com.mysql:mysql-connector-j"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
