config: ⚙️ 다중 프로필 및 Docker 개발 환경 설정
⚙️ application.yml을 통한 다중 프로필(dev, prod, test) 설정 도입
📦 개발, 테스트, 운영 환경별 데이터베이스, 문서, 서버 설정 파일 분리
🐳 docker-compose.yml로 MySQL 포함 로컬 개발 환경 구성
🚀 deploy.yml에 운영 환경 프로필 및 데이터베이스 변수 추가
🪵 logback-spring.xml로 통합 로깅 시스템 설정
🗑️ .gitignore에 Querydsl 생성 파일 및 MySQL 디렉토리 추가
📝 .env.example로 환경 변수 관리 명시

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,6 +109,10 @@ jobs:
             sudo docker run -d \
               --name ${{ env.CONTAINER_NAME }} \
               -p 8080:8080 \
+              -e SPRING_PROFILES_ACTIVE=prod \
+              -e DB_HOST=${{}} \
+              -e DB_USER=${{}} \
+              -e DB_PASSWORD=${{}} \
               --network ${{ env.DOCKER_NETWORK }} \
               ${{ secrets.DOCKERHUB_USERNAME }}/ticket-api:latest
 
