config: :package: Docker 이미지 종속성 정의
Docker 이미지 플레이스홀더를 실제 값으로 대체
Groonga/Mroonga 및 DbGate 이미지 버전 명시
배포 환경에 필요한 이미지 구성

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Define External Images
         id: define_external_images
         run: |
-          IMAGES=("image:tag" "image:tag" "image:tag") # Modify as needed
+          IMAGES=("groonga/mroonga:mysql-8.0.43-15.17" "dbgate/dbgate:6.6.11")
           echo "external_images=${IMAGES[*]}" >> $GITHUB_ENV
 
       - name: Setup Docker Buildx
