--- a/mysql/conf.d/my.cnf
+++ b/mysql/conf.d/my.cnf
@@ -5,9 +5,8 @@ default-character-set = utf8mb4
 character-set-server = utf8mb4
 collation-server = utf8mb4_unicode_ci
 
-lower_cache_table_names = 1
+lower_case_table_names = 1
 
-skip-host-cache
 skip-name-resolve
 
 slow_query_log = 1
@@ -18,8 +17,8 @@ log_timestamps = SYSTEM
 
 ngram_token_size = 2
 ft_min_word_len = 2
-innodb_fit_min_token_size = 2
-innodb_fit_enable_stopword = 1
+innodb_ft_min_token_size = 2
+innodb_ft_enable_stopword = 1
 
 [mysql]
 default-character-set = utf8mb4
