feat: ✨ Redis 통합 및 환경 설정
📦 build.gradle에 Redis Starter 종속성 추가
🐳 docker-compose에 Redis 서비스 정의
⚙️ .env.example 및 application YML에 Redis 환경 변수 설정
✅ 개발, 테스트, 프로덕션 Redis 연동 기반 마련
➡️ 캐싱, 세션 관리 등 향후 기능 확장을 위한 준비

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,9 +110,11 @@ jobs:
               --name ${{ env.CONTAINER_NAME }} \
               -p 8080:8080 \
               -e SPRING_PROFILES_ACTIVE=prod \
-              -e DB_HOST=${{}} \
-              -e DB_USER=${{}} \
-              -e DB_PASSWORD=${{}} \
+              -e DB_HOST=${{ secrets.DB_HOST }} \
+              -e DB_USER=${{ secrets.DB_USER }} \
+              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
+              -e REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} \
               --network ${{ env.DOCKER_NETWORK }} \
               ${{ secrets.DOCKERHUB_USERNAME }}/ticket-api:latest
 
