--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,11 @@ DB_PASSWORD=
 DB_HOST_PORT=
 DB_CONTAINER_PORT=
 
+REDIS_HOST=
+REDIS_PASSWORD=
+REDIS_HOST_PORT=
+REDIS_CONTAINER_PORT=
+
 SERVER_ADDRESS=
 SERVER_PORT=
 
