--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,17 @@ services:
       - ./mysql/data:/var/lib/mysql
       - ./mysql/conf.d:/etc/mysql/conf.d
       - ./mysql/log:/var/log/mysql
+  redis:
+    image: redis:6.2.21
+    container_name: demo-redis
+    restart: always
+    networks:
+      - demo-network
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    ports:
+      - ${REDIS_HOST_PORT}:${REDIS_CONTAINER_PORT}
+    command: [ "redis-server", "--requirepass", "${REDIS_PASSWORD}" ]
   dbgate:
     image: dbgate/dbgate:6.6.11
     container_name: demo-dbgate
