--- a/src/main/resources/config/prod/application-prod_db.yml
+++ b/src/main/resources/config/prod/application-prod_db.yml
@@ -29,6 +29,20 @@ spring:
         #highlight_sql: true
         #use_sql_comments: true
     open-in-view: false
+  data:
+    redis:
+      client-type: lettuce
+      database: 0
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_HOST_PORT:6379}
+      password: ${REDIS_PASSWORD}
+      lettuce:
+        pool:
+          enabled: true
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
+          max-wait: -1ms
 #logging:
   #level:
     #org.hibernate.sql: debug
