build: 🚀 Nginx Proxy Manager 서비스 추가
🐳 docker-compose에 Nginx Proxy Manager 서비스 정의
➕ .env.example에 NPM 포트 환경 변수 추가
📝 .gitignore에 NPM 데이터 디렉토리 예외 처리
⚙️ 간편한 리버스 프록시 및 SSL 관리 기능 제공

# Conflicts:
#	.gitignore

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ SERVER_PORT=
 
 DBGATE_HOST_PORT=
 DBGATE_CONTAINER_PORT=
+
+NPM_HTTP_HOST_PORT=
+NPM_HTTP_CONTAINER_PORT=
+NPM_HTTPS_HOST_PORT=
+NPM_HTTPS_CONTAINER_PORT=
+NPM_ADMIN_HOST_PORT=
+NPM_ADMIN_CONTAINER_PORT=
