fix: ✨ 컨테이너 이름 환경 변수로 설정
♻️ deploy.yml 내 하드코딩된 컨테이너 이름 환경 변수화
✅ 배포 스크립트의 유연성 및 재사용성 증대

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,8 +104,8 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/ticket-api:latest
-            sudo docker stop dev-ticket-api || true
-            sudo docker rm dev-ticket-api || true
+            sudo docker stop ${{ env.CONTAINER_NAME }} || true
+            sudo docker rm ${{ env.CONTAINER_NAME }} || true
             sudo docker run -d \
               --name ${{ env.CONTAINER_NAME }} \
               -p 8080:8080 \
