config: 📝 재시작 정책 및 로그 로테이션 적용
✨ 모든 Docker 컨테이너 재시작 정책 `unless-stopped`로 변경
- 서버 재부팅 시 자동 재시작 방지 및 수동 제어 용이성 확보
- 기존 `always` 정책 개선

📝 각 서비스에 JSON 파일 기반 로그 로테이션 설정 추가
- `max-size`, `max-file`, `compress` 옵션으로 효율적인 로그 관리
- 디스크 공간 사용 최적화 및 로그 파일 압축

💾 Redis 컨테이너 데이터 볼륨 마운트 추가
- 데이터 영속성 보장

⏱️ Redis 컨테이너에 `Asia/Seoul` 타임존 설정 적용
- 시간 관련 오류 방지 및 정확한 로그 시간 기록

🕸️ 배포 스크립트(`deploy.yml`)의 네트워크 설정 조정
- 일관된 배포 환경 구성 유지

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,14 +108,17 @@ jobs:
             sudo docker rm ${{ env.CONTAINER_NAME }} || true
             sudo docker run -d \
               --name ${{ env.CONTAINER_NAME }} \
-              -p 8080:8080 \
+              --network ${{ env.DOCKER_NETWORK }} \
               -e SPRING_PROFILES_ACTIVE=prod \
               -e DB_HOST=${{ secrets.DB_HOST }} \
               -e DB_USER=${{ secrets.DB_USER }} \
               -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
               -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
               -e REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} \
-              --network ${{ env.DOCKER_NETWORK }} \
+              -p 8080:8080 \
+              --log-opt max-size=10m \
+              --log-opt max-file=3 \
+              --log-opt compress=true \
               ${{ secrets.DOCKERHUB_USERNAME }}/ticket-api:latest
 
       - name: Remove GitHub IP from Security Group
