--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ def querydslVersion = '5.1.0'
 def p6spyVersion = '1.12.0'
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
