--- a/src/main/resources/config/prod/application-prod_server.yml
+++ b/src/main/resources/config/prod/application-prod_server.yml
@@ -55,3 +55,40 @@ spring:
       shutdown:
         await-termination: false
         #await-termination-period:
+management:
+  endpoints:
+    access:
+      default: none
+    web:
+      exposure:
+        include: health, info, loggers, metrics, prometheus
+      #base-path: /actuator
+      base-path: /monitor
+      discovery:
+        enabled: true
+  endpoint:
+    health:
+      access: unrestricted
+      show-details: always
+      probes:
+        enabled: true
+    info:
+      access: read-only
+    loggers:
+      access: unrestricted
+    metrics:
+      access: read-only
+    prometheus:
+      access: read-only
+    shutdown:
+      access: none
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+    os:
+      enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
