feat: ✨ 서버 헤더 처리 및 Swagger UI 설정 추가
⚙️ 서버 forward headers strategy를 framework로 설정
- 리버스 프록시 환경에서 올바른 헤더 처리 보장
✨ Swagger UI 요청 처리 시간 표시 활성화
- API 디버깅 및 성능 모니터링 개선
🧹 Swagger UI 기본 URL 비활성화
- Swagger UI 화면 간소화

--- a/src/main/resources/config/dev/application-dev_docs.yml
+++ b/src/main/resources/config/dev/application-dev_docs.yml
@@ -7,6 +7,8 @@ springdoc:
   swagger-ui:
     enabled: true
     path: /swagger-ui.html
+    disable-swagger-default-url: true
+    display-request-duration: true
     layout: BaseLayout
     operations-sorter: alpha
     tags-sorter: alpha
