--- a/src/main/resources/config/dev/application-dev_server.yml
+++ b/src/main/resources/config/dev/application-dev_server.yml
@@ -23,6 +23,7 @@ server:
       max: 200
       min-spare: 10
   shutdown: graceful
+  forward-headers-strategy: framework
 spring:
   devtools:
     livereload:
