deps: 📦 테스트 라이브러리 및 ULID 의존성 추가
✨ ULID Creator 라이브러리 추가
- 고유 식별자 생성 및 관리에 활용

🧪 테스트 관련 의존성 추가
- AutoParams: 테스트 인자 자동 생성 지원
- Fixture Monkey: 복잡 객체 픽스처 생성 및 관리
- Datafaker: 실세계 기반 테스트 데이터 제공
- Jqwik: 속성 기반 테스트 패러다임 도입

--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,16 @@ repositories {
 }
 
 // dependency versions
+def ulidCreatorVersion = '5.2.3'
 def jacksonDatabindVersion = '3.0.2'
 def springDocOpenApiVersion = '2.8.13'
 def querydslVersion = '5.1.0'
 def p6spyVersion = '1.12.0'
+def jjwtVersion = '0.13.0'
+def autoParamsVersion = '11.3.1'
+def fixtureMonkeyVersion = '1.1.15'
+def datafakerVersion = '2.5.1'
+def jqwikVersion = '1.9.3'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -39,6 +45,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // ULID Creator
+    implementation "com.github.f4b6a3:ulid-creator:$ulidCreatorVersion"
 
     // Jackson Datatype: JSR310
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
@@ -65,6 +74,34 @@ dependencies {
     runtimeOnly "com.mysql:mysql-connector-j"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // AutoParams
+    testImplementation "io.github.autoparams:autoparams:$autoParamsVersion"
+    // AutoParams Lombok
+    testImplementation "io.github.autoparams:autoparams-lombok:$autoParamsVersion"
+    // AutoParams Mockito
+    testImplementation "io.github.autoparams:autoparams-mockito:$autoParamsVersion"
+
+    // Fixture Monkey
+    testImplementation "com.navercorp.fixturemonkey:fixture-monkey-autoparams:$fixtureMonkeyVersion"
+    testImplementation "com.navercorp.fixturemonkey:fixture-monkey-jackson:$fixtureMonkeyVersion"
+    testImplementation "com.navercorp.fixturemonkey:fixture-monkey-javax-validation:$fixtureMonkeyVersion"
+    testImplementation "com.navercorp.fixturemonkey:fixture-monkey-mockito:$fixtureMonkeyVersion"
+    testImplementation "com.navercorp.fixturemonkey:fixture-monkey-starter:$fixtureMonkeyVersion"
+
+    // Datafaker
+    testImplementation "net.datafaker:datafaker:$datafakerVersion"
+
+    // Jqwik
+    testImplementation "net.jqwik:jqwik:$jqwikVersion"
+    // Jqwik API
+    testImplementation "net.jqwik:jqwik-api:$jqwikVersion"
+    // Jqwik Engine
+    testImplementation "net.jqwik:jqwik-engine:$jqwikVersion"
+    // Jqwik Time
+    testImplementation "net.jqwik:jqwik-time:$jqwikVersion"
+    // Jqwik Testing
+    testImplementation "net.jqwik:jqwik-testing:$jqwikVersion"
 }
 
 tasks.named('test') {
