--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
@@ -69,10 +72,18 @@ dependencies {
     // P6Spy Spring Boot Starter
     implementation "com.github.gavlyukovskiy:p6spy-spring-boot-starter:$p6spyVersion"
 
+    // JJWT :: API
+    implementation "io.jsonwebtoken:jjwt-api:$jjwtVersion"
+    // JJWT :: Impl
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
+    // JJWT :: Extensions :: Jackson
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly "com.h2database:h2"
     runtimeOnly "com.mysql:mysql-connector-j"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // AutoParams
