--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,21 @@ services:
         max-size: "10m"
         max-file: "3"
         compress: "true"
+  smtp4dev:
+    image: rnwood/smtp4dev:latest
+    container_name: demo-smtp4dev
+    restart: always
+    networks:
+      - demo-network
+    ports:
+      - "5000:80"
+      - "2525:25"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+        compress: "true"
 
 networks:
   demo-network:
