--- a/.gitignore
+++ b/.gitignore
@@ -204,13 +204,13 @@ gradle-app.setting
 
 ### Docker ###
 # MySQL file
-!mysql/conf.d/my.cnf
-mysql/
+!docker-volume/mysql/conf.d/my.cnf
+docker-volume/mysql/
 
 # Redis file
-redis/
+docker-volume/redis/
 
 # Nginx Proxy Manager file
-npm/
+docker-volume/npm/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,intellij,java,gradle
