--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     ports:
       - ${DB_HOST_PORT}:${DB_CONTAINER_PORT}
     volumes:
-      - ./mysql/data:/var/lib/mysql
-      - ./mysql/conf.d:/etc/mysql/conf.d
-      - ./mysql/log:/var/log/mysql
+      - ./docker-volume/mysql/data:/var/lib/mysql
+      - ./docker-volume/mysql/conf.d:/etc/mysql/conf.d
+      - ./docker-volume/mysql/log:/var/log/mysql
     logging:
       driver: "json-file"
       options:
@@ -35,7 +35,7 @@ services:
     ports:
       - ${REDIS_HOST_PORT}:${REDIS_CONTAINER_PORT}
     volumes:
-      - ./redis/data:/data
+      - ./docker-volume/redis/data:/data
     command: [ "redis-server", "--requirepass", "${REDIS_PASSWORD}" ]
     logging:
       driver: "json-file"
@@ -70,8 +70,8 @@ services:
       - ${NPM_HTTPS_HOST_PORT}:${NPM_HTTPS_CONTAINER_PORT}
       - ${NPM_ADMIN_HOST_PORT}:${NPM_ADMIN_CONTAINER_PORT}
     volumes:
-      - ./npm/data:/data
-      - ./npm/letsencrypt:/etc/letsencrypt
+      - ./docker-volume/npm/data:/data
+      - ./docker-volume/npm/letsencrypt:/etc/letsencrypt
     logging:
       driver: "json-file"
       options:
