config: 🔧 .env.example 환경 변수 업데이트
- SMTP 이메일 서비스 설정
- OAUTH2 인증 설정: Google, Naver, Kakao
- JWT 토큰 발급자 및 비밀 키
- 이메일 검증 및 비밀번호 초기화 기본 URL

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,26 @@
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM=
+
+OAUTH2_GOOGLE_CLIENT_ID=
+OAUTH2_GOOGLE_CLIENT_SECRET=
+OAUTH2_GOOGLE_REDIRECT_URI=
+OAUTH2_NAVER_CLIENT_ID=
+OAUTH2_NAVER_CLIENT_SECRET=
+OAUTH2_NAVER_REDIRECT_URI=
+OAUTH2_KAKAO_CLIENT_ID=
+OAUTH2_KAKAO_CLIENT_SECRET=
+OAUTH2_KAKAO_REDIRECT_URI=
+
+JWT_ISSUER=
+JWT_ACCESS_TOKEN_SECRET=
+JWT_REFRESH_TOKEN_SECRET=
+
+EMAIL_VERIFICATION_BASE_URL=
+EMAIL_PASSWORD_RESET_BASE_URL=
+
 DB_ROOT_PASSWORD=
 DB_HOST=
 DB_USER=
