ci: ⚙️ 배포 환경 변수 추가
📧 SMTP 서버 인증 정보 환경 변수 추가
🔑 Google, Naver, Kakao OAuth2 클라이언트 정보 추가
🔒 JWT 토큰 발행자 및 시크릿 키 설정 추가
🌐 이메일 인증 및 비밀번호 재설정 URL 추가
애플리케이션 핵심 기능 정상 동작 위한 필수 값 반영

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,6 +115,25 @@ jobs:
               -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
               -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
               -e REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} \
+              -e SMTP_HOST=${{ secrets.SMTP_HOST }} \
+              -e SMTP_PORT=${{ secrets.SMTP_PORT }} \
+              -e SMTP_USERNAME=${{ secrets.SMTP_USERNAME }} \
+              -e SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }} \
+              -e SMTP_FROM=${{ secrets.SMTP_FROM }} \
+              -e OAUTH2_GOOGLE_CLIENT_ID=${{ secrets.OAUTH2_GOOGLE_CLIENT_ID }} \
+              -e OAUTH2_GOOGLE_CLIENT_SECRET=${{ secrets.OAUTH2_GOOGLE_CLIENT_SECRET }} \
+              -e OAUTH2_GOOGLE_REDIRECT_URI=${{ secrets.OAUTH2_GOOGLE_REDIRECT_URI }} \
+              -e OAUTH2_NAVER_CLIENT_ID=${{ secrets.OAUTH2_NAVER_CLIENT_ID }} \
+              -e OAUTH2_NAVER_CLIENT_SECRET=${{ secrets.OAUTH2_NAVER_CLIENT_SECRET }} \
+              -e OAUTH2_NAVER_REDIRECT_URI=${{ secrets.OAUTH2_NAVER_REDIRECT_URI }} \
+              -e OAUTH2_KAKAO_CLIENT_ID=${{ secrets.OAUTH2_KAKAO_CLIENT_ID }} \
+              -e OAUTH2_KAKAO_CLIENT_SECRET=${{ secrets.OAUTH2_KAKAO_CLIENT_SECRET }} \
+              -e OAUTH2_KAKAO_REDIRECT_URI=${{ secrets.OAUTH2_KAKAO_REDIRECT_URI }} \
+              -e JWT_ISSUER=${{ secrets.JWT_ISSUER }} \
+              -e JWT_ACCESS_TOKEN_SECRET=${{ secrets.JWT_ACCESS_TOKEN_SECRET }} \
+              -e JWT_REFRESH_TOKEN_SECRET=${{ secrets.JWT_REFRESH_TOKEN_SECRET }} \
+              -e EMAIL_VERIFICATION_BASE_URL=${{ secrets.EMAIL_VERIFICATION_BASE_URL }} \
+              -e EMAIL_PASSWORD_RESET_BASE_URL=${{ secrets.EMAIL_PASSWORD_RESET_BASE_URL }} \
               -p 8080:8080 \
               --log-opt max-size=10m \
               --log-opt max-file=3 \
