build: ⚙️ 테스트 시간대 설정
➕ build.gradle에 테스트 시간대 설정 추가
✔️ 테스트 환경 일관성 확보
❌ 시간대 의존적 테스트 오류 방지

--- a/build.gradle
+++ b/build.gradle
@@ -118,8 +118,9 @@ dependencies {
     testImplementation "net.jqwik:jqwik-testing:$jqwikVersion"
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
+    systemProperty 'user.timezone', 'Asia/Seoul'
 }
 
 jar {
