ci: 👷 Gradle CI 빌드 정보 로깅 활성화
Gradle CI 빌드 명령어에 `--info` 옵션 추가
📝 빌드 로그 상세도를 높여 문제 진단 및 원인 파악 개선

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,4 +83,4 @@ jobs:
 
       - name: Build with Gradle
         working-directory: ./
-        run: ./gradlew build --no-daemon
+        run: ./gradlew build --no-daemon --info
