feat: ✨ 포트원 PG 연동 초기 구현
📦 새로운 PG사 포트원 연동 기본 구조 구현
🏗️ 일반 PG API 클라이언트 및 요청/응답 모델 정의
💳 포트원 결제 및 취소 API 클라이언트 구체화
⚙️ PG 결제 관련 환경 변수 및 설정 파일 추가
🚨 결제 처리 오류 및 PG사 미발견 에러 코드 신설

--- a/src/main/resources/config/dev/application-dev_auth.yml
+++ b/src/main/resources/config/dev/application-dev_auth.yml
@@ -63,3 +63,8 @@ email:
   verification-base-url: ${EMAIL_VERIFICATION_BASE_URL:http://localhost:8080/api/v1/accounts/verify-email?token=}
   password-reset-token-expiry-minutes: 10
   password-reset-base-url: ${EMAIL_PASSWORD_RESET_BASE_URL:http://localhost:8080/api/v1/accounts/password-reset-confirm?token=}
+payment:
+  portone:
+    api:
+      url: ${PG_PAYMENT_PORTONE_BASE_URL}
+      secret-key: ${PG_PAYMENT_PORTONE_SECRET_KEY}
