--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ NPM_HTTPS_HOST_PORT=
 NPM_HTTPS_CONTAINER_PORT=
 NPM_ADMIN_HOST_PORT=
 NPM_ADMIN_CONTAINER_PORT=
+
+PG_PAYMENT_PORTONE_BASE_URL=
+PG_PAYMENT_PORTONE_SECRET_URL=
