--- a/src/main/resources/config/prod/application-prod_auth.yml
+++ b/src/main/resources/config/prod/application-prod_auth.yml
@@ -72,3 +72,8 @@ email:
   verification-base-url: ${EMAIL_VERIFICATION_BASE_URL}
   password-reset-token-expiry-minutes: 10
   password-reset-base-url: ${EMAIL_PASSWORD_RESET_BASE_URL}
+payment:
+  portone:
+    api:
+      url: ${PG_PAYMENT_PORTONE_BASE_URL}
+      secret-key: ${PG_PAYMENT_PORTONE_SECRET_KEY}
