--- a/src/test/resources/config/test/application-test_auth.yml
+++ b/src/test/resources/config/test/application-test_auth.yml
@@ -68,3 +68,8 @@ email:
   verification-base-url: http://localhost:8080/api/v1/accounts/verify-email?token=
   password-reset-token-expiry-minutes: 10
   password-reset-base-url: http://localhost:8080/api/v1/accounts/password-reset-confirm?token=
+payment:
+  portone:
+    api:
+      url: PG_PAYMENT_PORTONE_BASE_URL
+      secret-key: PG_PAYMENT_PORTONE_SECRET_KEY
