--- a/src/test/resources/config/test/application-test_auth.yml
+++ b/src/test/resources/config/test/application-test_auth.yml
@@ -73,3 +73,4 @@ payment:
     api:
       url: PG_PAYMENT_PORTONE_BASE_URL
       secret-key: PG_PAYMENT_PORTONE_SECRET_KEY
+      timeout-millis: 5000
