config: ⚙️ Portone 결제 스토어 ID 환경 변수 추가
Portone PG 연동 위한 스토어 ID 설정 추가
개발, 운영, 테스트 인증 파일에 스토어 ID 필드 반영
환경 변수 예시 파일에 PG_PAYMENT_PORTONE_STORE_ID 추가

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,7 @@ NPM_HTTPS_CONTAINER_PORT=
 NPM_ADMIN_HOST_PORT=
 NPM_ADMIN_CONTAINER_PORT=
 
+PG_PAYMENT_PORTONE_STORE_ID=
 PG_PAYMENT_PORTONE_BASE_URL=
 PG_PAYMENT_PORTONE_SECRET_KEY=
 PG_PAYMENT_PORTONE_TIMEOUT_MILLIS=
