--- a/src/main/resources/config/dev/application-dev_auth.yml
+++ b/src/main/resources/config/dev/application-dev_auth.yml
@@ -65,6 +65,7 @@ email:
   password-reset-base-url: ${EMAIL_PASSWORD_RESET_BASE_URL:http://localhost:8080/api/v1/accounts/password-reset-confirm?token=}
 payment:
   portone:
+    store-id: ${PG_PAYMENT_PORTONE_STORE_ID}
     api:
       url: ${PG_PAYMENT_PORTONE_BASE_URL}
       secret-key: ${PG_PAYMENT_PORTONE_SECRET_KEY}
