--- a/src/test/resources/config/test/application-test_auth.yml
+++ b/src/test/resources/config/test/application-test_auth.yml
@@ -70,6 +70,7 @@ email:
   password-reset-base-url: http://localhost:8080/api/v1/accounts/password-reset-confirm?token=
 payment:
   portone:
+    store-id: PG_PAYMENT_PORTONE_STORE_ID
     api:
       url: PG_PAYMENT_PORTONE_BASE_URL
       secret-key: PG_PAYMENT_PORTONE_SECRET_KEY
