ci: ✨ JaCoCo 테스트 커버리지 보고서 통합
➕ CI 빌드 과정에 jacocoTestReport 태스크 실행
📝 작업 요약에 코드 커버리지 정보 표시
⬆️ JaCoCo HTML 보고서를 빌드 아티팩트로 업로드
🔐 체크 및 콘텐츠에 대한 워크플로 권한 설정

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  checks: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -81,6 +85,17 @@ jobs:
         working-directory: ./
         run: chmod +x ./gradlew
 
-      - name: Build with Gradle
+      - name: Build and Analyze with JaCoCo
         working-directory: ./
-        run: ./gradlew build --no-daemon --info
+        run: ./gradlew clean build jacocoTestReport --no-daemon --info
+
+      - name: Add Coverage to Job Summary
+        run: |
+          cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
+
+      - name: Upload JaCoCo HTML Report
+        uses: actions/upload-artifact@v6
+        with:
+          name: jacoco-html-report
+          path: build/reports/jacoco/test/html/
+          retention-days: 5
