refactor: 🐳 Docker 환경 및 개발 구성 분리
✨ docker-compose 설정 파일 개선 및 분리
- docker-compose.yml:
  - mysql, redis, npm 볼륨 경로 docker/ 로 변경
  - groonga/mroonga, dbgate 이미지 버전 업데이트
  - smtp4dev 서비스 제거
- docker-compose.dev.yml: 개발용 docker-compose 파일 추가

📝 .gitignore 파일 업데이트
- docker/ 디렉토리 구조에 맞춰 볼륨 경로 무시 규칙 변경

⚙️ 환경 변수 및 설정 파일 추가
- .env.example: Postgresql 관련 환경 변수 추가
- my.cnf: MySQL 기본 설정 파일 추가

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,10 @@ DB_PASSWORD=
 DB_HOST_PORT=
 DB_CONTAINER_PORT=
 
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+
 REDIS_HOST=
 REDIS_PASSWORD=
 REDIS_HOST_PORT=
