--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 name: demo-docker
 
 services:
+
   mysql:
-    image: groonga/mroonga:mysql-8.0.43-15.17
+    image: groonga/mroonga:mysql-8.0.44-15.21
     container_name: demo-mysql
     restart: unless-stopped
     networks:
@@ -15,15 +16,16 @@ services:
     ports:
       - ${DB_HOST_PORT}:${DB_CONTAINER_PORT}
     volumes:
-      - ./docker-volume/mysql/data:/var/lib/mysql
-      - ./docker-volume/mysql/conf.d:/etc/mysql/conf.d
-      - ./docker-volume/mysql/log:/var/log/mysql
+      - ./docker/mysql/data:/var/lib/mysql
+      - ./docker/mysql/conf.d:/etc/mysql/conf.d
+      - ./docker/mysql/log:/var/log/mysql
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
         compress: "true"
+
   redis:
     image: redis:6.2.21
     container_name: demo-redis
@@ -35,16 +37,17 @@ services:
     ports:
       - ${REDIS_HOST_PORT}:${REDIS_CONTAINER_PORT}
     volumes:
-      - ./docker-volume/redis/data:/data
-    command: [ "redis-server", "--requirepass", "${REDIS_PASSWORD}" ]
+      - ./docker/redis/data:/data
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
         compress: "true"
+
   dbgate:
-    image: dbgate/dbgate:6.6.11
+    image: dbgate/dbgate:6.8.1
     container_name: demo-dbgate
     restart: unless-stopped
     networks:
@@ -57,6 +60,7 @@ services:
         max-size: "10m"
         max-file: "3"
         compress: "true"
+
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:2.13.5
     container_name: demo-nginx-proxy-manager
@@ -70,23 +74,8 @@ services:
       - ${NPM_HTTPS_HOST_PORT}:${NPM_HTTPS_CONTAINER_PORT}
       - ${NPM_ADMIN_HOST_PORT}:${NPM_ADMIN_CONTAINER_PORT}
     volumes:
-      - ./docker-volume/npm/data:/data
-      - ./docker-volume/npm/letsencrypt:/etc/letsencrypt
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-        compress: "true"
-  smtp4dev:
-    image: rnwood/smtp4dev:latest
-    container_name: demo-smtp4dev
-    restart: always
-    networks:
-      - demo-network
-    ports:
-      - "5000:80"
-      - "2525:25"
+      - ./docker/npm/data:/data
+      - ./docker/npm/letsencrypt:/etc/letsencrypt
     logging:
       driver: "json-file"
       options:
