--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
     id 'io.freefair.lombok' version '9.1.0'
     // JaCoCo
     id 'jacoco'
+    // SonarQube
+    id 'org.sonarqube' version '7.2.2.6593'
 }
 
 idea {
@@ -195,5 +197,16 @@ jacocoTestCoverageVerification {
                 minimum = 0.00
             }
         }
+    }
+}
+
+sonar {
+    properties {
+        property 'sonar.projectKey', ''
+        property 'sonar.host.url', ''
+        property 'sonar.token', ''
+        property 'sonar.sourceEncoding', 'UTF-8'
+        property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
+        property 'sonar.coverage.exclusions', '**/*Application.java,' + '**/*Config.java,' + '**/*Dto.java,' + '**/*Request.java,' + '**/*Response.java,' + '**/*Interceptor.java,' + '**/*Exception.java,' + '**/Q*.java'
     }
 }
