--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     // JJWT :: Extensions :: Jackson
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
 
+    // Apache HttpClient
+    implementation 'org.apache.httpcomponents.client5:httpclient5'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
     runtimeOnly "com.h2database:h2"
