--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 name: Build
 
 on:
-  workflow_run:
-    workflows: [ "Docker" ]
-    types:
-      - completed
   push:
     paths:
       - '**/*.java'
@@ -12,7 +8,6 @@ on:
       - '**/*.gradle'
       - '**/*.gradle.kts'
       - '**/gradle-wrapper.properties'
-      - '.github/workflows/*.yml'
     branches:
       - main
   pull_request:
@@ -22,7 +17,6 @@ on:
       - '**/*.gradle'
       - '**/*.gradle.kts'
       - '**/gradle-wrapper.properties'
-      - '.github/workflows/*.yml'
     branches:
       - main
 
@@ -37,56 +31,29 @@ jobs:
       fail-fast: false
       matrix:
         java-version: [ '21' ]
+        work-dir: [ '.' ]
 
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Fetch all history for comparison
-        run: git fetch origin main --depth=1
-
-      - name: Check if Gradle Dependencies Changed
-        id: check_gradle_cache
-        run: |
-          if git diff --name-only origin/main...HEAD | grep -E '(\.gradle$|\.gradle\.kts$|gradle-wrapper\.properties$)'; then
-            echo "gradle_cache_valid=false" >> $GITHUB_ENV
-          else
-            echo "gradle_cache_valid=true" >> $GITHUB_ENV
-          fi
-
-      - name: Restore Gradle Dependencies
-        if: env.gradle_cache_valid == 'true'
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches/modules-2
-            ~/.gradle/wrapper
-          key: gradle-deps-${{ runner.os }}-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', '**/gradle-wrapper.properties') }}
-          restore-keys: gradle-deps-${{ runner.os }}-
+        uses: actions/checkout@v6
 
       - name: Setup Java
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v5
         with:
           distribution: 'temurin'
           java-version: ${{ matrix.java-version }}
 
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+        uses: gradle/actions/setup-gradle@v5
         with:
-          gradle-home-cache-cleanup: true
-
-      - name: Clear Old Gradle Cache if Needed
-        if: env.gradle_cache_valid == 'false'
-        run: rm -rf ~/.gradle/caches ~/.gradle/wrapper
+          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
 
       - name: Grant execute permission for Gradle
-        working-directory: ./
+        working-directory: ${{ matrix.work-dir }}
         run: chmod +x ./gradlew
 
       - name: Build and Analyze with JaCoCo
-        working-directory: ./
+        working-directory: ${{ matrix.work-dir }}
         run: ./gradlew clean build jacocoTestReport --no-daemon --info
 
       - name: Add Coverage to Job Summary
