ci: ⚙️ 워크플로우에 PortOne 결제 환경 변수 추가
⚙️ PortOne 결제 시스템 연동을 위한 환경 변수 추가
- PG_PAYMENT_PORTONE_STORE_ID
- PG_PAYMENT_PORTONE_BASE_URL
- PG_PAYMENT_PORTONE_SECRET_KEY
- PG_PAYMENT_PORTONE_TIMEOUT_MILLIS 설정
배포 워크플로우에서 결제 정보 주입

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -134,6 +134,10 @@ jobs:
               -e JWT_REFRESH_TOKEN_SECRET=${{ secrets.JWT_REFRESH_TOKEN_SECRET }} \
               -e EMAIL_VERIFICATION_BASE_URL=${{ secrets.EMAIL_VERIFICATION_BASE_URL }} \
               -e EMAIL_PASSWORD_RESET_BASE_URL=${{ secrets.EMAIL_PASSWORD_RESET_BASE_URL }} \
+              -e PG_PAYMENT_PORTONE_STORE_ID=${{ secrets.PG_PAYMENT_PORTONE_STORE_ID }} \
+              -e PG_PAYMENT_PORTONE_BASE_URL=${{ secrets.PG_PAYMENT_PORTONE_BASE_URL }} \
+              -e PG_PAYMENT_PORTONE_SECRET_KEY=${{ secrets.PG_PAYMENT_PORTONE_SECRET_KEY }} \
+              -e PG_PAYMENT_PORTONE_TIMEOUT_MILLIS=${{ secrets.PG_PAYMENT_PORTONE_TIMEOUT_MILLIS }} \
               -p 8080:8080 \
               --log-opt max-size=10m \
               --log-opt max-file=3 \
