--- a/build.gradle
+++ b/build.gradle
@@ -158,13 +158,16 @@ jacocoTestReport {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, excludes: [
                     "**/*Application*",
-                    "**/*Config*",
+                    "**/config/**",
                     "**/*Dto*",
                     "**/*Request*",
                     "**/*Response*",
+                    "**/dto/**",
                     "**/*Interceptor*",
                     "**/*Exception*",
                     "**/common/**",
+                    "**/domain/**/model/**",
+                    "**/infra/**/config/**"
             ] + Qdomains)
         }))
     }
@@ -180,12 +183,15 @@ jacocoTestCoverageVerification {
 
             excludes = [
                     "**.*Application*",
-                    "**.*Config*",
+                    "**/config/**",
                     "**.*Dto*",
                     "**.*Request*",
                     "**.*Response*",
+                    "**/dto/**",
                     "**.*Exception*",
-                    "**/Q*"
+                    "**/Q*",
+                    "**/common/config/**",
+                    "**/infra/**/config/**"
             ]
 
             limit {
@@ -210,6 +216,6 @@ sonar {
         property 'sonar.token', ''
         property 'sonar.sourceEncoding', 'UTF-8'
         property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
-        property 'sonar.coverage.exclusions', '**/*Application.java,' + '**/*Config.java,' + '**/*Dto.java,' + '**/*Request.java,' + '**/*Response.java,' + '**/*Interceptor.java,' + '**/*Exception.java,' + '**/Q*.java'
+        property 'sonar.coverage.exclusions', '**/*Application.java,' + '**/config/**,' + '**/*Dto.java,' + '**/*Request.java,' + '**/*Response.java,' + '**/dto/**,' + '**/*Interceptor.java,' + '**/*Exception.java,' + '**/Q*.java,' + '**/common/config/**,' + '**/infra/**/config/**'
     }
 }
