build: ⚙️ SonarQube 커버리지 제외 패턴 개선
💡 SonarQube 커버리지 제외 목록 가독성 개선
🗑️ 광범위한 기존 제외 패턴 제거
✨ `*Properties` 및 `model` 파일 제외 규칙 추가
📝 제외 패턴 정의 형식 변경

--- a/build.gradle
+++ b/build.gradle
@@ -165,9 +165,8 @@ jacocoTestReport {
                     "**/dto/**",
                     "**/*Interceptor*",
                     "**/*Exception*",
-                    "**/common/**",
-                    "**/domain/**/model/**",
-                    "**/infra/**/config/**"
+                    "**/*Properties*",
+                    "**/model/**"
             ] + Qdomains)
         }))
     }
@@ -189,9 +188,9 @@ jacocoTestCoverageVerification {
                     "**.*Response*",
                     "**/dto/**",
                     "**.*Exception*",
+                    "**.*Properties*",
                     "**/Q*",
-                    "**/common/config/**",
-                    "**/infra/**/config/**"
+                    "**/model/**"
             ]
 
             limit {
@@ -216,6 +215,19 @@ sonar {
         property 'sonar.token', ''
         property 'sonar.sourceEncoding', 'UTF-8'
         property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
-        property 'sonar.coverage.exclusions', '**/*Application.java,' + '**/config/**,' + '**/*Dto.java,' + '**/*Request.java,' + '**/*Response.java,' + '**/dto/**,' + '**/*Interceptor.java,' + '**/*Exception.java,' + '**/Q*.java,' + '**/common/config/**,' + '**/infra/**/config/**'
+        def coverageExclusions = [
+                '**/*Application.java',
+                '**/config/**',
+                '**/*Dto.java',
+                '**/*Request.java',
+                '**/*Response.java',
+                '**/dto/**',
+                '**/*Interceptor.java',
+                '**/*Exception.java',
+                '**/*Properties.java',
+                '**/Q*.java',
+                '**/model/**'
+        ]
+        property 'sonar.coverage.exclusions', coverageExclusions.join(',')
     }
 }
