build: 👷 테스트 분리 및 JaCoCo 리포트 개선
✨ 단위 테스트를 일반 및 동시성 테스트로 분할
♻️ Gradle 프로젝트 속성으로 테스트 태그 제어
✅ JaCoCo 리포트 생성 단계를 분리 실행
📈 코드 커버리지 요약 보고서 자동 생성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -126,7 +126,13 @@ dependencies {
 }
 
 test {
-    useJUnitPlatform()
+    useJUnitPlatform {
+        def includeTagsProp = project.findProperty("includeTags")
+        def excludeTagsProp = project.findProperty("excludeTags")
+
+        if (includeTagsProp) includeTags includeTags.toString().split(',').collect { it.trim() } as String[]
+        if (excludeTagsProp) excludeTags includeTags.toString().split(',').collect { it.trim() } as String[]
+    }
     systemProperty 'user.timezone', 'Asia/Seoul'
 }
 
