--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,30 @@ jobs:
         working-directory: ${{ matrix.work-dir }}
         run: chmod +x ./gradlew
 
-      - name: Build and Analyze with JaCoCo
+      - name: Run Unit Tests (Excluding Concurrency Tests)
         working-directory: ${{ matrix.work-dir }}
-        run: ./gradlew clean build jacocoTestReport --no-daemon --info
+        run: ./gradlew clean test -PexcludeTags=concurrency --no-build-cache --stacktrace --info
+
+      - name: Run Unit Tests (Only Concurrency Tests)
+        working-directory: ${{ matrix.work-dir }}
+        run: ./gradlew test -PincludeTags=concurrency --no-build-cache --stacktrace --info
+
+      - name: Generate JaCoCo Report
+        working-directory: ${{ matrix.work-dir }}
+        run: ./gradlew jacocoTestReport -x test --no-daemon --info
+
+      - name: Generate Code Coverage Summary
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: build/reports/jacoco/test/jacocoTestReport.xml
+          badge: true
+          fail_below_min: false
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 80'
 
       - name: Add Coverage to Job Summary
         run: |
