feat: 📦 Redisson 의존성 추가 및 버전 정의
✨ Redisson 라이브러리 추가
➕ 분산락 및 캐싱 기능 도입을 위한 기반 마련
스프링 부트 스타터와 스프링 데이터 레디스 통합 모듈 포함

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ def springDocOpenApiVersion = '2.8.13'
 def querydslVersion = '5.1.0'
 def p6spyVersion = '1.12.0'
 def jjwtVersion = '0.13.0'
+def redissonVersion = '3.52.0'
 def autoParamsVersion = '11.3.1'
 def fixtureMonkeyVersion = '1.1.15'
 def datafakerVersion = '2.5.1'
@@ -83,6 +84,13 @@ dependencies {
     runtimeOnly "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
     // JJWT :: Extensions :: Jackson
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
+
+    // Redisson
+    implementation "org.redisson:redisson:$redissonVersion"
+    // Redisson/Spring Boot Starter
+    implementation "org.redisson:redisson-spring-boot-starter:$redissonVersion"
+    // Redisson/Spring Data Redis V3.4.x Integration
+    implementation "org.redisson:redisson-spring-data-34:$redissonVersion"
 
     // Apache HttpClient
     implementation 'org.apache.httpcomponents.client5:httpclient5'
