--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,13 +64,10 @@ jobs:
         working-directory: ${{ matrix.work-dir }}
         run: ./gradlew jacocoTestReport -x test --no-daemon --info
 
-      - name: Debug - Check Report Existence
-        run: ls -la build/reports/jacoco/test
-
       - name: Generate Code Coverage Summary
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
+          filename: build/reports/jacoco/test/jacocoTestReport.xml
           badge: true
           fail_below_min: false
           format: markdown
