ci: 🚀 JaCoCo 리포트 업로드 경로 업데이트
- 🔀 JaCoCo 리포트 파일명 `jacocoTestReport.xml`을 `coverage.xml`로 변경
- 🚀 업로드 액션에서 변경된 `coverage.xml` 파일 사용
- 🔎 리포트 파일 생성 확인을 위한 `ls -R` 디버그 명령 추가

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,10 +64,16 @@ jobs:
         working-directory: ${{ matrix.work-dir }}
         run: ./gradlew jacocoTestReport -x test --no-daemon --info
 
+      - name: Debug and Copy Report
+        working-directory: ${{ matrix.work-dir }}
+        run: |
+          ls -R build/reports/jacoco/test
+          cp build/reports/jacoco/test/jacocoTestReport.xml coverage.xml
+
       - name: Generate Code Coverage Summary
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: build/reports/jacoco/test/jacocoTestReport.xml
+          filename: coverage.xml
           badge: true
           fail_below_min: false
           format: markdown
